==> nanoframework/nf-interpreter/targets/ChibiOS/_RP2040/cpu_spi.cpp <==
#include <ch.h>
#include <hal.h>
#include <cmsis_os.h>
#include <LaunchCLR.h>
#include <string.h>
#include <targetPAL.h>
#include <sys_dev_spi_native_target.h>
#define RP_SPI_PERI_CLK 125000000

HRESULT CPU_SPI_nWrite_nRead(
    uint32_t deviceHandle,
    SPI_DEVICE_CONFIGURATION &sdev,
    SPI_WRITE_READ_SETTINGS &wrc,
    uint8_t *writeBuffer,
    int32_t writeSize,
    uint8_t *readBuffer,
    int32_t readSize)
{
    NANOCLR_HEADER();
    {
        NF_PAL_SPI *palSpi = (NF_PAL_SPI *)deviceHandle;
        bool sync = (wrc.callback == 0);

        palSpi->BufferIs16bits = wrc.Bits16ReadWrite;
        palSpi->Callback = wrc.callback;

        if (writeBuffer != NULL)
        {
            palSpi->WriteSize = writeSize;
            palSpi->WriteBuffer = writeBuffer;
        }

        if (readBuffer != NULL)
        {
            palSpi->ReadSize = readSize;
            palSpi->ReadBuffer = readBuffer;
        }

        palSpi->BusIndex = sdev.Spi_Bus;

        GetSPIConfig(sdev, wrc, &palSpi->Configuration);

        if (sync)
        {
            palSpi->Configuration.end_cb = NULL;
        }

        spiAcquireBus(palSpi->Driver);
        spiStart(palSpi->Driver, &palSpi->Configuration);
        spiSelect(palSpi->Driver);

        palSpi->ChipSelect = wrc.DeviceChipSelect;
        if (wrc.DeviceChipSelect >= 0)
        {
            CPU_GPIO_SetPinState(wrc.DeviceChipSelect, (GpioPinValue)wrc.ChipSelectActiveState);
        }

        if (sync)
        {
            if (palSpi->WriteSize != 0 && palSpi->ReadSize != 0)
            {
                if (wrc.fullDuplex)
                {
                    spiExchange(
                        palSpi->Driver,
                        palSpi->WriteSize > palSpi->ReadSize ? palSpi->WriteSize : palSpi->ReadSize,
                        palSpi->WriteBuffer,
                        palSpi->ReadBuffer);
                }
                else
                {
                    spiSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                    spiReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
            }
            else
            {
                if (palSpi->ReadSize != 0)
                {
                    spiReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
                else
                {
                    spiSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                }
            }

            CompleteTransfer(palSpi);

            if (wrc.DeviceChipSelect >= 0)
            {
                CPU_GPIO_SetPinState(wrc.DeviceChipSelect, (GpioPinValue)!wrc.ChipSelectActiveState);
            }
        }
        else
        {
            if (wrc.DeviceChipSelect >= 0)
            {
                CPU_GPIO_SetPinState(wrc.DeviceChipSelect, (GpioPinValue)wrc.ChipSelectActiveState);
            }

            if (palSpi->WriteSize != 0 && palSpi->ReadSize != 0)
            {
                if (wrc.fullDuplex)
                {
                    palSpi->SequentialTxRx = false;
                    spiStartExchange(
                        palSpi->Driver,
                        palSpi->WriteSize > palSpi->ReadSize ? palSpi->WriteSize : palSpi->ReadSize,
                        palSpi->WriteBuffer,
                        palSpi->ReadBuffer);
                }
                else
                {
                    palSpi->SequentialTxRx = true;
                    spiStartSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                }
            }
            else
            {
                palSpi->SequentialTxRx = false;

                if (palSpi->ReadSize != 0)
                {
                    spiStartReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
                else
                {
                    spiStartSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                }
            }

            NANOCLR_SET_AND_LEAVE(CLR_E_BUSY);
        }
    }

    NANOCLR_NOCLEANUP();
}

SPI_OP_STATUS CPU_SPI_OP_Status(uint8_t busIndex, uint32_t deviceHandle)
{
    (void)busIndex;

    NF_PAL_SPI *palSpi = (NF_PAL_SPI *)deviceHandle;

    switch (palSpi->Driver->state)
    {
        default:
        case SPI_UNINIT:
        case SPI_STOP:
        case SPI_READY:
            return SPI_OP_READY;
        case SPI_ACTIVE:
            return SPI_OP_RUNNING;
        case SPI_COMPLETE:
            return SPI_OP_COMPLETE;
    }
}

bool CPU_SPI_Initialize(uint8_t busIndex, const SPI_DEVICE_CONFIGURATION &spiDeviceConfig)
{
    switch (busIndex)
    {
#if RP_SPI_USE_SPI0
        case 0:
            if (SPI0_PAL.Driver == NULL)
            {
                ConfigPins_SPI0(spiDeviceConfig);
                SPI0_PAL.Driver = &SPID0;
                SPI0_PAL.ChipSelect = spiDeviceConfig.DeviceChipSelect;
            }
            break;
#endif
#if RP_SPI_USE_SPI1
        case 1:
            if (SPI1_PAL.Driver == NULL)
            {
                ConfigPins_SPI1(spiDeviceConfig);
                SPI1_PAL.Driver = &SPID1;
                SPI1_PAL.ChipSelect = spiDeviceConfig.DeviceChipSelect;
            }
            break;
#endif
        default:
            return false;
    }

    return true;
}

bool CPU_SPI_Uninitialize(uint8_t busIndex)
{
    switch (busIndex)
    {
#if RP_SPI_USE_SPI0
        case 0:
            spiStop(&SPID0);
            SPI0_PAL.Driver = NULL;
            spiReleaseBus(&SPID0);
            break;
#endif
#if RP_SPI_USE_SPI1
        case 1:
            spiStop(&SPID1);
            SPI1_PAL.Driver = NULL;
            spiReleaseBus(&SPID1);
            break;
#endif
        default:
            return false;
    }

    return true;
}
